wb-nm-helper (1.19.0) stable; urgency=medium

  * New tier-oriented switching conception

 -- Aleksandr Kazadaev <aleksandr.kazadaev@wirenboard.com>  Mon, 23 Jan 2023 18:00:00 +0600

wb-nm-helper (1.18.4) stable; urgency=medium

  * Fix whitespaces in connection name bug
  * Add connection device, active, state publication at the end of up/down process

 -- Ekaterina Volkova <ekaterina.volkova@wirenboard.ru>  Thu, 02 Feb 2023 10:06:58 +0300

wb-nm-helper (1.18.3) stable; urgency=medium

  * Add C locale for nmcli calls

 -- Ekaterina Volkova <ekaterina.volkova@wirenboard.ru>  Mon, 30 Jan 2023 13:08:55 +0300

wb-nm-helper (1.18.2) stable; urgency=medium

  * Fix connectivity check for gsm devices

 -- Ekaterina Volkova <ekaterina.volkova@wirenboard.ru>  Thu, 26 Jan 2023 16:13:44 +0300

wb-nm-helper (1.18.1) stable; urgency=medium

  * Fix update device data when changed

 -- Ekaterina Volkova <ekaterina.volkova@wirenboard.ru>  Wed, 25 Jan 2023 13:08:25 +0300

wb-nm-helper (1.18.0) stable; urgency=medium

  * Add connections virtual devices

 -- Ekaterina Volkova <ekaterina.volkova@wirenboard.ru>  Tue, 17 Jan 2023 20:55:59 +0300

wb-nm-helper (1.17.2) stable; urgency=medium

  * Implement Wi-Fi networks scan using NetworkManager

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Wed, 18 Jan 2023 17:23:31 +0500

wb-nm-helper (1.17.1) stable; urgency=medium

  * No functional changes

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Fri, 13 Jan 2023 11:55:45 +0500

wb-nm-helper (1.17.0) stable; urgency=medium

  * Add 'DNS servers'/'DNS search domains' options

 -- Nikolay Korotkiy <nikolay.korotkiy@wirenboard.com>  Thu, 12 Jan 2023 17:35:00 +0400

wb-nm-helper (1.16.2) stable; urgency=medium

  * Fix Internet connection sharing settings

 -- Petr Krasnoshchekov <petr.krasnoshchekov@wirenboard.com>  Thu, 12 Jan 2023 17:51:08 +0500

wb-nm-helper (1.16.1) stable; urgency=medium

  * Add validation for CAN bitrate in homeui
