@@ -28,7 +28,8 @@ Architecture: all
 Depends: ${misc:Depends},
          python3 (>= 3.5),
          python3-wb-nm-helper (= ${binary:Version}),
-         wb-mqtt-homeui (>= 2.51.0~~),
+         wb-mqtt-homeui (>= 2.56.0~~),
+         wb-mqtt-confed (>= 1.12.0),
          network-manager,
          modemmanager,
          mobile-broadband-provider-info,
